# dividing_map

./: CMakeLists.txt
include/: divide.h  map.h
src/: divide.cpp  main.cpp
